--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,18 @@
   padding: 2rem;
   text-align: center;
 }
-
+.box{
+  display: flex;
+  flex-wrap: wrap;
+  height: 400px;
+  align-content: space-between;
+	}
+	.box-item {
+		flex-wrap: nowrap;
+		background-color: aqua;
+		width: 200px;
+		height: 200px;
+}
 .logo {
   height: 6em;
   padding: 1.5em;
@@ -30,12 +41,4 @@
   a:nth-of-type(2) .logo {
     animation: logo-spin infinite 20s linear;
   }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
 }
