--- a/src/index.css
+++ b/src/index.css
@@ -39,3 +39,25 @@ body {
   margin-left: 20px;
   font-size: 14px;
 }
+.itemlist{
+  margin: 20px;
+  padding: 20px;
+  display: grid;
+  grid-template-columns: 2fr 2fr 2fr 2fr;
+  grid-template-rows: 2fr 2fr;
+  justify-content: center;
+  align-items: center;
+  justify-items: center;
+}
+.line-clamp {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+.card{
+  margin: 10px!important;
+}
+.card-body {
+  padding: 0!important;
+}
