--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -6104,7 +6104,7 @@ button.bg-primary:focus {
 }
 
 .bg-secondary {
-  background-color: #EDF1FF !important;
+  background-color: #D19C97 !important;
 }
 
 a.bg-secondary:hover, a.bg-secondary:focus,
@@ -9424,6 +9424,7 @@ a.text-dark:hover, a.text-dark:focus {
   }
   .badge {
     border: 1px solid #000;
+    color: #000 !important;
   }
   .table {
     border-collapse: collapse !important;
