--- a/src/index.css
+++ b/src/index.css
@@ -61,3 +61,24 @@ body {
 .card-body {
   padding: 0!important;
 }
+.right{
+  float:right;
+}
+.container-form{
+  max-width: 600px;
+  margin-left: auto;
+  margin-right: auto;
+  overflow: hidden;
+}
+.idorder{
+
+  width: auto;
+  height: auto;
+  padding: 10px;
+  overflow: hidden;
+  background-color: brown;
+  text-align: center;
+  color: white;
+  margin-top: 50px;
+  margin-bottom: 100px;
+}
